Added UI Dashboard with Product Details

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
     <meta charset="utf-8">
     <title>Front End Challenge</title>
     <link href='plugins/bootstrap-3.3.7-dist/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+    <link href='plugins/boot.dark.min.css' rel='stylesheet' type='text/css'>
     <link href='plugins/font-awesome-4.7.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
     <!-- Components CSS -->
     <link href='components/dashboard/dashboard.css' rel='stylesheet' type='text/css'>
     <link href='components/navbar/navbar-header.css' rel='stylesheet' type='text/css'>
+    <link href='components/product-detail/product-detail' rel='stylesheet' type='text/css'>
 </head>
 
 <body ng-controller="globalCtrl" ng-cloak>
@@ -37,6 +39,8 @@
 <!-- Components Ctrl -->
 <script type="text/javascript" src="components/dashboard/dashboardCtrl.js"></script>
 <script type="text/javascript" src="components/login/loginCtrl.js"></script>
+<script type="text/javascript" src="components/product-detail/productDetailCtrl.js"></script>
+
 <!-- Services -->
 <script type="text/javascript" src="services/product-list.js"></script>
 
