Fixed UI Issues And Added Responsive using Media for SMaller Devices

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
     <link href='plugins/font-awesome-4.7.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
     <!-- Components CSS -->
     <link href='components/dashboard/dashboard.css' rel='stylesheet' type='text/css'>
+    <link href='components/dashboard/dashboard-media.css' rel='stylesheet' type='text/css'>
     <link href='components/navbar/navbar-header.css' rel='stylesheet' type='text/css'>
-    <link href='components/product-detail/product-detail' rel='stylesheet' type='text/css'>
+    <link href='components/global/boot-overwrite.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body ng-controller="globalCtrl" ng-cloak>
@@ -39,8 +40,6 @@
 <!-- Components Ctrl -->
 <script type="text/javascript" src="components/dashboard/dashboardCtrl.js"></script>
 <script type="text/javascript" src="components/login/loginCtrl.js"></script>
-<script type="text/javascript" src="components/product-detail/productDetailCtrl.js"></script>
-
 <!-- Services -->
 <script type="text/javascript" src="services/product-list.js"></script>
 
